Added Stomp and SockJS libraries Added websocket demo Fixed watch issues Removed unused coffee support Removed unused views

--- a/app/views/performance.html
+++ b/app/views/performance.html
@@ -1,20 +1,23 @@
 <div class="jumbotron">
     <div class="container">
         <h1>Performance</h1>
-        <p>Making use of all the power the browser gives you.</p>
+        <p>Making use of all the browser's power.</p>
     </div>
 </div>
 
 <div class="container">
     <ul class="nav nav-tabs">
-        <li role="presentation" ng-class="{ active: $state.includes('webworkers') }">
+        <li role="presentation" ui-sref-active="active">
             <a angular-ripple="" ui-sref="webworkers"><i class="glyphicon glyphicon-plane"></i> Web Workers</a>
         </li>
-        <li role="presentation" ng-class="{ active: $state.includes('dataloading') }">
+        <li role="presentation" ui-sref-active="active">
             <a angular-ripple="" ui-sref="dataloading"><i class="glyphicon glyphicon-plane"></i> Data Loading</a>
         </li>
-        <li role="presentation" ng-class="{ active: $state.includes('cache') }">
+        <li role="presentation" ui-sref-active="active">
             <a angular-ripple="" ui-sref="cache"><i class="glyphicon glyphicon-plane"></i> IndexedDB</a>
+        </li>
+        <li role="presentation" ui-sref-active="active">
+            <a angular-ripple="" ui-sref="websocket"><i class="glyphicon glyphicon-plane"></i> Web Socket</a>
         </li>
     </ul>
     <div class="well" ui-view autoscroll="false"></div>
