--- a/app/views/theme.html
+++ b/app/views/theme.html
@@ -56,7 +56,7 @@
                                 <div class="form-group">
                                     <input type="text" class="form-control" placeholder="Search">
                                 </div>
-                                <button type="submit" angular-ripple class="btn btn-sm btn-action">Submit</button>
+                                <button type="submit" angular-ripple class="btn btn-sm btn-action ml-xs">Submit</button>
                             </form>
                             <ul class="nav navbar-nav navbar-right">
                                 <li><a angular-ripple href="#">Link</a>
@@ -108,7 +108,7 @@
                                 <div class="form-group">
                                     <input type="text" class="form-control" placeholder="Search">
                                 </div>
-                                <button type="submit" angular-ripple class="btn btn-sm btn-action">Submit</button>
+                                <button type="submit" angular-ripple class="btn btn-sm btn-action ml-xs">Submit</button>
                             </form>
                             <ul class="nav navbar-nav navbar-right">
                                 <li><a angular-ripple href="#">Link</a>
@@ -245,8 +245,8 @@
                     </div>
 
                     <div class="btn-group">
-                        <a href="#" class="btn btn-action">Warning</a>
-                        <a href="#" class="btn btn-action dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></a>
+                        <a href="#" angular-ripple class="btn btn-action">Warning</a>
+                        <a href="#" angular-ripple class="btn btn-action dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a angular-ripple href="#">Action</a>
                             </li>
@@ -811,21 +811,21 @@
             <h2 id="nav-breadcrumbs">Breadcrumbs</h2>
             <div class="bs-component">
                 <ul class="breadcrumb">
-                    <li angular-ripple class="active">Home</li>
+                    <li class="active">Home</li>
                 </ul>
 
                 <ul class="breadcrumb">
-                    <li><a angular-ripple href="#">Home</a>
+                    <li><a href="#">Home</a>
                     </li>
-                    <li angular-ripple class="active">Library</li>
+                    <li class="active">Library</li>
                 </ul>
 
                 <ul class="breadcrumb">
-                    <li><a angular-ripple href="#">Home</a>
+                    <li><a href="#">Home</a>
                     </li>
-                    <li><a angular-ripple href="#">Library</a>
+                    <li><a href="#">Library</a>
                     </li>
-                    <li angular-ripple class="active">Data</li>
+                    <li class="active">Data</li>
                 </ul>
             </div>
 
