--- a/app/views/ui.html
+++ b/app/views/ui.html
@@ -25,6 +25,6 @@
             <a angular-ripple="" ui-sref="ui-components"><i class="glyphicon glyphicon-book"></i> UI Components</a>
         </li>
     </ul>
-    <div class="well" ui-view autoscroll="false"></div>
+    <div ui-view class="tab-pane" autoscroll="false"></div>
 
 </div>
