--- a/app/styles/bootstrap-theme/_variables.scss
+++ b/app/styles/bootstrap-theme/_variables.scss
@@ -5,6 +5,9 @@
 
 //== Colors
 //
+//White color
+$white: #fff;
+
 //## Gray and brand colors for use across Bootstrap.
 
 $gray-base:              #565656;
@@ -49,44 +52,44 @@ $link-hover-decoration: underline;
     font-style: normal;
     font-stretch: normal;
     font-weight: 100;
-    src: local('Roboto Thin'), local('Roboto-Thin'), url('./theme/fonts/Roboto-Thin.ttf') format('truetype');
+    src: local('Roboto Thin'), local('Roboto-Thin'), url('./bootstrap-theme/fonts/Roboto-Thin.ttf') format('truetype');
 }
 @font-face {
     font-family: 'Roboto';
     font-style: normal;
     font-stretch: normal;
     font-weight: 300;
-    src: local('Roboto Light'), local('Roboto-Light'), url('./theme/fonts/Roboto-Light.ttf') format('truetype');
+    src: local('Roboto Light'), local('Roboto-Light'), url('./bootstrap-theme/fonts/Roboto-Light.ttf') format('truetype');
 }
 @font-face {
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
-    src: local('Roboto Regular'), local('Roboto-Regular'), url('./theme/fonts/Roboto-Regular.ttf') format('truetype');
+    src: local('Roboto Regular'), local('Roboto-Regular'), url('./bootstrap-theme/fonts/Roboto-Regular.ttf') format('truetype');
 }
 @font-face {
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 200;
-    src: local('RobotoCondensed Regular'), local('RobotoCondensed-Regular'), url('./theme/fonts/RobotoCondensed-Regular.ttf') format('truetype');
+    src: local('RobotoCondensed Regular'), local('RobotoCondensed-Regular'), url('./bootstrap-theme/fonts/RobotoCondensed-Regular.ttf') format('truetype');
 }
 @font-face {
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 500;
-    src: local('Roboto Medium'), local('Roboto-Medium'), url('./theme/fonts/Roboto-Medium.ttf') format('truetype');
+    src: local('Roboto Medium'), local('Roboto-Medium'), url('./bootstrap-theme/fonts/Roboto-Medium.ttf') format('truetype');
 }
 @font-face {
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 600;
-    src: local('Roboto Bold'), local('Roboto-Bold'), url('./theme/fonts/Roboto-Bold.ttf') format('truetype');
+    src: local('Roboto Bold'), local('Roboto-Bold'), url('./bootstrap-theme/fonts/Roboto-Bold.ttf') format('truetype');
 }
 @font-face {
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
-    src: local('RobotoCondensed Bold'), local('RobotoCondensed-Bold'), url('./theme/fonts/RobotoCondensed-Bold.ttf') format('truetype');
+    src: local('RobotoCondensed Bold'), local('RobotoCondensed-Bold'), url('./bootstrap-theme/fonts/RobotoCondensed-Bold.ttf') format('truetype');
 }
 
 @font-face {
