- button hover styles - datepicker calendar styles.

--- a/app/styles/bootstrap-theme/partials/_buttons.scss
+++ b/app/styles/bootstrap-theme/partials/_buttons.scss
@@ -44,6 +44,11 @@
     border: 1px solid $btn-action-border;
     background-color: $btn-action-bg;
     color: $btn-action-color;
+
+    &:hover {
+        background-color: darken($btn-action-bg, 10%);
+        border: 1px solid darken($btn-action-border, 10%);
+    }
 }
 
 /*OUT OF TOOLBAR DROPDOWN MENU*/
