Updated appverse-core version to 0.7 Updated angular mocks and resolutions to angular 1.4 Fixed livereload Migrated ui-bootstrap syntax to version 0.14 Updated accordion, modal and carousel example Removed now unneeded websocket open call

--- a/app/views/rest/rest.html
+++ b/app/views/rest/rest.html
@@ -25,18 +25,18 @@
 </div>
 
 <div>
-    <tabset>
-        <tab heading="users-view.html">
+    <uib-tabset>
+        <uib-tab heading="users-view.html">
             <pre hljs include="'views/rest/users-code.html'" language="html"></pre>
-        </tab>
-        <tab heading="user-modal.html">
+        </uib-tab>
+        <uib-tab heading="user-modal.html">
             <pre hljs include="'views/rest/user-modal-code.html'" language="html"></pre>
-        </tab>
-        <tab heading="users-controllers.js">
+        </uib-tab>
+        <uib-tab heading="users-controllers.js">
             <pre hljs include="'scripts/controllers/rest-controller-code.js'" language="javascript"></pre>
-        </tab>
-        <tab heading="users.json">
+        </uib-tab>
+        <uib-tab heading="users.json">
             <pre hljs include="'api/v1/users.json'" language="json"></pre>
-        </tab>
-    </tabset>
+        </uib-tab>
+    </uib-tabset>
 </div>
