--- a/app/views/translation/translation.html
+++ b/app/views/translation/translation.html
@@ -29,11 +29,11 @@
     </div>
 </div>
 
-<tabset>
-    <tab heading="translation-view.html">
+<uib-tabset>
+    <uib-tab heading="translation-view.html">
         <pre hljs include="'views/translation/translation-code.html'" language="html"></pre>
-    </tab>
-    <tab heading="translation-controller.js">
+    </uib-tab>
+    <uib-tab heading="translation-controller.js">
         <pre hljs include="'scripts/controllers/translation-controller-code.js'" language="javascript"></pre>
-    </tab>
-</tabset>
+    </uib-tab>
+</uib-tabset>
