--- a/app/views/ui-components/ui-components.html
+++ b/app/views/ui-components/ui-components.html
@@ -17,11 +17,11 @@
     </div>
 </div>
 <br>
-<tabset>
-    <tab heading="HTML">
+<uib-tabset>
+    <uib-tab heading="HTML">
         <pre hljs include="'views/ui-components/rzslider-code.html'" language="html"></pre>
-    </tab>
-</tabset>
+    </uib-tab>
+</uib-tabset>
 
 <div class="page-header">
     <h1>QR code</h1>
@@ -42,11 +42,11 @@
     </div>
 </div>
 <br>
-<tabset>
-    <tab heading="HTML">
+<uib-tabset>
+    <uib-tab heading="HTML">
         <pre hljs include="'views/ui-components/qrcode-code.html'" language="html"></pre>
-    </tab>
-</tabset>
+    </uib-tab>
+</uib-tabset>
 
 <div class="page-header">
     <h1>Xeditable</h1>
@@ -67,8 +67,8 @@
     </div>
 </div>
 <br>
-<tabset>
-    <tab heading="HTML">
+<uib-tabset>
+    <uib-tab heading="HTML">
         <pre hljs include="'views/ui-components/xeditable-code.html'" language="html"></pre>
-    </tab>
-</tabset>
+    </uib-tab>
+</uib-tabset>
