--- a/app/views/websocket/websocket.html
+++ b/app/views/websocket/websocket.html
@@ -20,11 +20,11 @@
     </div>
 </div>
 
-<tabset>
-    <tab heading="HTML">
+<uib-tabset>
+    <uib-tab heading="HTML">
         <pre hljs include="'views/websocket/websocket-code.html'" language="html"></pre>
-    </tab>
-    <tab heading="JS">
+    </uib-tab>
+    <uib-tab heading="JS">
         <pre hljs include="'scripts/controllers/websocket-controller-code.js'" language="javascript"></pre>
-    </tab>
-</tabset>
+    </uib-tab>
+</uib-tabset>
