--- a/app/views/webworkers/webworkers.html
+++ b/app/views/webworkers/webworkers.html
@@ -26,12 +26,12 @@
 </div>
 
 <div>
-    <tabset>
-        <tab heading="webworkers-view.html">
+    <uib-tabset>
+        <uib-tab heading="webworkers-view.html">
             <pre hljs include="'views/webworkers/webworkers-code.html'" language="html"></pre>
-        </tab>
-        <tab heading="webworkers-controller.js">
+        </uib-tab>
+        <uib-tab heading="webworkers-controller.js">
             <pre hljs include="'scripts/controllers/webworkers-controller-code.js'" language="javascript"></pre>
-        </tab>
-    </tabset>
+        </uib-tab>
+    </uib-tabset>
 </div>
