--- a/app/views/detection/detection.html
+++ b/app/views/detection/detection.html
@@ -16,12 +16,12 @@
 </div>
 
 <div>
-    <tabset>
-        <tab heading="detection-view.html">
+    <uib-tabset>
+        <uib-tab heading="detection-view.html">
             <pre hljs include="'views/detection/detection-code.html'" language="html"></pre>
-        </tab>
-        <tab heading="detection-controllers.js">
+        </uib-tab>
+        <uib-tab heading="detection-controllers.js">
             <pre hljs include="'scripts/controllers/detection-controller-code.js'" language="javascript"></pre>
-        </tab>
-    </tabset>
+        </uib-tab>
+    </uib-tabset>
 </div>
