--- a/app/views/ui.html
+++ b/app/views/ui.html
@@ -9,19 +9,19 @@
 <div class="container">
 
     <ul class="nav nav-tabs">
-        <li role="presentation" ng-class="{ active: $state.includes('theme') }">
+        <li role="presentation" ui-sref-active="active">
             <a angular-ripple="" ui-sref="theme"><i class="glyphicon glyphicon-pencil"></i> Theme</a>
         </li>
-        <li role="presentation" ng-class="{ active: $state.includes('ui-bootstrap') }">
+        <li role="presentation" ui-sref-active="active">
             <a angular-ripple="" ui-sref="ui-bootstrap"><i class="glyphicon glyphicon-book"></i> UI Bootstrap</a>
         </li>
-        <li role="presentation" ng-class="{ active: $state.includes('ui-select') }">
+        <li role="presentation" ui-sref-active="active">
             <a angular-ripple="" ui-sref="ui-select"><i class="glyphicon glyphicon-book"></i> UI Select</a>
         </li>
-        <li role="presentation" ng-class="{ active: $state.includes('charts') }">
+        <li role="presentation" ui-sref-active="active">
             <a angular-ripple="" ui-sref="charts"><i class="glyphicon glyphicon-stats"></i> Charts</a>
         </li>
-        <li role="presentation" ng-class="{ active: $state.includes('ui-components') }">
+        <li role="presentation" ui-sref-active="active">
             <a angular-ripple="" ui-sref="ui-components"><i class="glyphicon glyphicon-book"></i> UI Components</a>
         </li>
     </ul>
