--- a/app/views/rest/user-modal-code.html
+++ b/app/views/rest/user-modal-code.html
@@ -63,5 +63,5 @@
 </div>
 <div class="modal-footer">
     <button angular-ripple type="submit" class="btn btn-default" ng-click="cancel()">Cancel</button>
-    <button angular-ripple type="submit" class="btn btn-action" ng-click="ok()" ng-disabled="!userForm.$valid">{{user.id ? 'Save' : 'Add'}}</button>
+    <button angular-ripple type="submit" class="btn btn-action" ng-click="ok()" av-rest-save="user" ng-disabled="!userForm.$valid">{{user.id ? 'Save' : 'Add'}}</button>
 </div>
