Removed unused modal view Renamed view title to view.html

--- a/app/views/rest/rest-ng-repeat.html
+++ b/app/views/rest/rest-ng-repeat.html
@@ -26,11 +26,8 @@
 
 <div>
     <uib-tabset>
-        <uib-tab heading="users-view.html">
+        <uib-tab heading="view.html">
             <pre hljs include="'views/rest/ngrepeat-code.html'" language="html"></pre>
-        </uib-tab>
-        <uib-tab heading="user-modal.html">
-            <pre hljs include="'views/rest/user-modal-code.html'" language="html"></pre>
         </uib-tab>
         <uib-tab heading="controller.js">
             <pre hljs include="'scripts/controllers/rest-ng-repeat-code.js'" language="javascript"></pre>
