--- a/app/views/rest/ngrepeat-code.html
+++ b/app/views/rest/ngrepeat-code.html
@@ -13,23 +13,16 @@
     </div>
 
     <form name="userForm">
-        <div ng-show="usersGetting">
-            <div class="progress">
-                <div class="progress-bar progress-bar-info progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
-                    Getting users...
-                </div>
-            </div>
-        </div>
         <table av-rest-get="users" class="table table-hover table-condensed">
             <tr class="active">
-                <th>Name</th>
-                <th>Gender</th>
+                <th style="width:26%">Name</th>
                 <th>Company</th>
-                <th>Age</th>
-                <th>Actions</th>
+                <th style="width:110px">Gender</th>
+                <th style="width:80px">Age</th>
+                <th style="width:175px">Actions</th>
             </tr>
             <tr ng-repeat="user in users | filter:filterText">
-                <td style="width:26%">
+                <td>
                     <div ng-hide="user.editing">
                         <p class="form-control-static" ng-bind="user.name"></p>
                     </div>
@@ -47,7 +40,7 @@
                         <span class="text-danger" ng-show="userForm.company.$error.required && userForm.company.$dirty">Company is required.</span>
                     </div>
                 </td>
-                <td style="width:110px">
+                <td>
                     <div ng-hide="user.editing">
                         <p class="form-control-static" ng-bind="user.gender"></p>
                     </div>
@@ -55,7 +48,7 @@
                         <select class="form-control" ng-options="item as item for item in ['male','female']" ng-model="user.gender"></select>
                     </div>
                 </td>
-                <td style="width:80px">
+                <td>
                     <div ng-hide="user.editing">
                         <p class="form-control-static" ng-bind="user.age"></p>
                     </div>
@@ -66,7 +59,7 @@
                         <span class="text-danger" ng-show="userForm.age.$error.min">Minimum age is 0.</span>
                     </div>
                 </td>
-                <td style="width:175px">
+                <td>
                     <div ng-show="user.editing && !usersSaving">
                         <button av-rest-save="user" type="button" class="btn btn-primary" ng-disabled="!userForm.$valid">OK</button>
                         <button av-rest-cancel="user" type="button" class="btn btn-default">Cancel</button>
@@ -97,4 +90,11 @@
             </tr>
         </table>
     </form>
+    <div ng-show="usersGetting">
+        <div class="progress">
+            <div class="progress-bar progress-bar-info progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+                Getting users...
+            </div>
+        </div>
+    </div>
 </div>
