Removed unused webworkers files Added ng-webworker plugin Refactored webworker demo

--- a/app/views/webworkers/webworkers-code.html
+++ b/app/views/webworkers/webworkers-code.html
@@ -21,7 +21,9 @@
 
 <div class="row">
     <div class="col-xs-6">
-        <img src="images/angularPerformance.jpg" id="source" style="width:100%">
+        <canvas id="source"></canvas>
     </div>
-    <div class="col-xs-6" id="target" />
+    <div class="col-xs-6">
+        <canvas id="target"></canvas>
+    </div>
 </div>
