--- a/app/views/webworkers/webworkers.html
+++ b/app/views/webworkers/webworkers.html
@@ -6,14 +6,16 @@
 <div class="panel panel-primary">
     <div class="panel-heading">Explanation</div>
     <div class="panel-body">
-        <p>This section includes a heavy load process.
-            <br>The process select an area in the picture and extracts the dominant color from a set of complicated statistics. This step is repeated until all the picture area has been analyzed. When an area has been analyzed it is included in the DOM element.
-            <br>As you can see, this is the type of task you can include in a web worker.
+        <p>The process adds a perfect gaussian blur to the picture.
+            <br>The algorithm is taken from <a href="http://blog.ivank.net/fastest-gaussian-blur.html" target="_blank">here</a>.
+            <br>The web workers are created using the plugin <a href="https://github.com/mattslocum/ng-webworker" target="_blank">ng-webworker</a>.
+            <br>When an area has been analyzed it is painted to the canvas.
+            <br>As you can see, this is the type of task where you can make the most of a web worker. Also please note that the page can be scrolled for example so the main thread is freed from the heavy task and the UI is still responsive for the user.
             <br>
             <br>Select the <b>"Only One Thread"</b> option to check processing time using a single webworker (as commonly used). With the Pool of Workers you can attach a number of threads to parallelized the processing.
             <br>
-            <br>Select the <b>"Four threads"</b> option and compare the values in <b>"Time for Execution"</b>.
-            <br>Due to the busy threads of the available threads in your browser results can vary from one browser to another. A high number of threads does not guarantee a better performance. Search for the most appropriate number of threads for each specific process. Then, include the value in the configuration (<b>PERFORMANCE_CONFIG.webworker_pooled_threads</b>).</p>
+            <br>Select the <b>"Four threads"</b> option and compare the execution time.
+            <br>Due to the busy threads of the available threads in your browser results can vary from one browser to another. A high number of threads does not guarantee a better performance. Search for the most appropriate number of threads for each specific process, then include the value in the configuration (<b>PERFORMANCE_CONFIG.webworker_pooled_threads</b>).</p>
     </div>
 </div>
 
