- slider component fix.

--- a/app/styles/bootstrap-theme/partials/_sliders.scss
+++ b/app/styles/bootstrap-theme/partials/_sliders.scss
@@ -12,6 +12,8 @@ rzslider {
             &.rz-selection {
                 background: $brand-primary;
                 border-radius: 6px 0 0 6px;
+                border-right: 8px solid $brand-primary;
+                box-sizing: content-box;
             }
         }
 
